--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zizaco/confide",
+    "name": "awssports/confide",
     "description": "Confide is an authentication solution for Laravel 4",
     "keywords": ["laravel","illuminate","auth"],
     "license": "MIT",
@@ -17,12 +17,12 @@
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "*",
-        "laravelbook/ardent": "2.1.x"
+        "laravelbook/ardent": "dev-master"
     },
     "require-dev": {
         "mockery/mockery": "0.7.2",
-        "illuminate/database": "4.0.x",
-        "illuminate/auth": "4.0.x"
+        "illuminate/database": "4.x",
+        "illuminate/auth": "4.x"
     },
     "suggest": {
         "zizaco/entrust":"add Role-based Permissions to Laravel 4"
